@@ -15,7 +15,7 @@ mixed-effect, polytomous latent-class, and some other models; (multidimensional)
 \tabular{ll}{
 Package: \tab effects\cr
 Version: \tab 3.0-4\cr
-Date: \tab 2015/03/23\cr
+Date: \tab 2015/04/08\cr
 Suggests: \tab pbkrtest, nlme, MASS, poLCA, heplots, splines\cr
 Imports: \tab lme4, nnet, lattice, grid, colorspace\cr
 LazyLoad: \tab yes\cr
